k8s/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.0
        args:
          - "-config.file=/etc/loki/loki.yaml"
        ports:
          - containerPort: 3100
        volumeMounts:
          - name: config
            mountPath: /etc/loki
          - name: storage
            mountPath: /loki

      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: storage
          emptyDir: {}
