k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: todo-app

spec:
  type: NodePort

  selector:
    app: loki

  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
      nodePort: 30011
