k8s/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: todo-app
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      containers:
      - name: node-exporter
        image: prom/node-exporter
        ports:
        - containerPort: 9100

---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: todo-app
spec:
  selector:
    app: node-exporter
  ports:
    - port: 9100
      targetPort: 9100
