k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: todo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
